--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,31 +6,35 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[[bin]]
-name = "server"
-path = "src/server.rs"
-[[bin]]
-name = "client"
-path = "src/client.rs"
+# [[bin]]
+# name = "server"
+# path = "src/server.rs"
+# [[bin]]
+# name = "client"
+# path = "src/client.rs"
 
 
 [dependencies]
 toml = "0.5.8"
 cgroups-rs = "0.2.5"
 # cgroups-rs = {path = "extern/cgroups-rs"}
-nix = "0.23.1"
-libc = "0.2.97"
-notify = "4.0.17"
-syscallz = "0.15.0"
-config = "0.11.0"
-ipc-channel = "0.15.0"
-tonic = "0.4.3"
-prost = "0.7.0"
-tokio = { version = "1.7.0", features = ["rt-multi-thread"] }
-once_cell = "1.8.0"
+nix = "^0.23.1"
+libc = "^0.2.97"
+notify = "^4.0.17"
+syscallz = "^0.16.1"
+config = "^0.12.0"
+ipc-channel = "^0.15.0"
+tokio = { version = "^1.17.0", features = ["full"] }
+once_cell = "^1.8.0"
+nats = "^0.18.1"
+tracing = "^0.1.32"
+tracing-subscriber = "^0.3.9"
+dotenv = "^0.15.0"
+axum = "^0.4.8"
+serde = "^1.0.136"
+serde_json = "^1.0.79"
+rand = "^0.8.5"
+rayon = "^1.5.1"
 
-[build-dependencies]
-tonic-build = "0.4.2"
-
-[target.x86_64-unknown-linux-gnu]
-runner = 'sudo -E'
+# [target.x86_64-unknown-linux-gnu]
+# runner = 'sudo -E'
